data/all_generated_tests/raw_wast_tests/if_InvalidorInconsistentControlFlowGraph_1787.wast
;; 8. **Test: Invalid Stack State at `end`**    - **Description**: Design an `if` structure where the stack state is incorrect at the `end` instruction due to previous stack manipulations.    - **Constraint Checked**: Final stack state consistency at the end of an `if` block.    - **CFG Relevance**: Validates that the CFG correctly tracks stack states up to block termination.

(assert_invalid
  (module
    (func $invalid_stack_state
      (if (i32.const 1)
        (then (i32.const 42))
        (else))
      (i32.const 0) ;; This creates an imbalance in the stack state, leading to an invalid state at 'end'.
    )
  )
  "type mismatch"
)